<resources>
    <string name="app_name">Parstagram</string>

    <!-- Login -->
    <string name="et_user_hint">Username</string>
    <string name="et_pass_hint">Password</string>
    <string name="login_btn">Login</string>

    <string name="post_take_pic">Take Picture</string>
    <string name="post_submit">Submit</string>
    <string name="post_description_hint">Description</string>
    <string name="post_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
